assets/css/editor.css
/*Things worth considering adding to the overall style: (cleaner, more minimal look)
  
#header 
element.style {
height: 15px;
padding-top: 0px;
border-top: 0px;
}
no box shadow

different rounding for tabs
reduced padding in tabs

#content
element.style {
position: fixed;
top: 35px;
left: 5px;
}
 */
#header{
	height: 15px;
padding-top: 0px;
border-top: 0px;
}

.navbar .nav > li > a {
float: none;
padding: 5px 10px 10px;
text-decoration: none;
text-shadow: 0 1px 0 white;
}

.navbar .divider-vertical
{
	height:30px;
}

#content{
	position: fixed;
	top: 35px;
	left: 5px;
}
.tooltip.right {z-index: 50000;}
/*Project manager */


/*JQUERY UI*/

.ui-resizable-s {
  bottom: 0;
}
.ui-resizable-e {
  right: 0;
}
/*
.ui-resizable { position: relative;}
.ui-resizable-handle { position: absolute;font-size: 0.1px; display: block; }
.ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle { display: none; }
.ui-resizable-n { cursor: n-resize; height: 7px; width: 100%; top: -5px; left: 0; }
.ui-resizable-s { cursor: s-resize; height: 7px; width: 100%; bottom: -5px; left: 0; }
.ui-resizable-e { cursor: e-resize; width: 7px; right: -5px; top: 0; height: 100%; }
.ui-resizable-w { cursor: w-resize; width: 7px; left: -5px; top: 0; height: 100%; }
.ui-resizable-se { cursor: se-resize; width: 12px; height: 12px; right: 1px; bottom: 1px; }
.ui-resizable-sw { cursor: sw-resize; width: 9px; height: 9px; left: -5px; bottom: -5px; }
.ui-resizable-nw { cursor: nw-resize; width: 9px; height: 9px; left: -5px; top: -5px; }
.ui-resizable-ne { cursor: ne-resize; width: 9px; height: 9px; right: -5px; top: -5px;}
*/

.ui-dialog
{
	background-color: #3a3f44; /*same as slate theme bg*/
	/*border-color: transparent !important;
	border-width: 1px;*/
	border: 1px solid rgba(0, 0, 0, 0.3);
	color: #FFFFFF !important;
	
	
}
.ui-dialog-title
{
	color: #C8C8C8 !important;
	border-color: #000000 !important;
}
.ui-dialog-titlebar
{
	border-color: #000000 !important;

}
.ui-dialog .ui-dialog-titlebar
{
	border-color: transparent !important;
}

.ui-dialog-content
{
	background-color: #3a3f44;/*same as slate theme bg*/
}

.ui-resizable-handle
{
	/*background-color: #3a3f44;*//*same as slate theme bg*/
	color:#3a3f44;
}

.ui-widget-content
{
	background: #3a3f44;
	color: #C8C8C8 !important;
}

.ui-widget-content a
{
	color:inherit;
}

#dialogRegion
{
	background-color:  #262626;/*same as code editor black theme bg*/
	padding: 0px;
}

.ui-dialog .ui-dialog-titlebar-close .ui-state-hover
{
	color:#FF0000 !important;
}

ui-icon ui-icon-closethick .ui-state-hover
{
	color:#FF0000 !important;
	background-color: #FF0000 !important;
}




/*-------------------------------------*/		
/*Code Editor*/

.CodeMirror {
	/*top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	*/
	/*width:	auto;
	height: auto;
	overflow: auto;*/
}

.CodeMirror-scroll 
{
        height: 100%;
        min-height:500px;
        overflow-y: hidden;
        overflow-x: auto;
}

/*for current full line selection*/
/*.activeline {background: #e8f2ff !important;}
.activeline {background: #0AAAF1 !important;}*/
.activeline {background: #3a3f44 !important;}

/*for current selection other instances*/
/*span.CodeMirror-matchhighlight { background: #e9e9e9 }
.CodeMirror-focused span.CodeMirror-matchhighlight { background: #e7e4ff !important; }*/


span.CodeMirror-matchhighlight { background: #00438A }
.CodeMirror-focused span.CodeMirror-matchhighlight { background: #00438A !important; }


.CodeMirror-dialog {
  position: relative;
}

.CodeMirror-dialog > div {
  position: absolute;
  top: 0; left: 0; right: 0;
  background: white;
  border-bottom: 1px solid #eee;
  z-index: 15;
  padding: .1em .8em;
  overflow: hidden;
  color: #333;
}

.CodeMirror-dialog input {
  border: none;
  outline: none;
  background: transparent;
  width: 20em;
  color: inherit;
  font-family: monospace;
}

.CodeMirror-dialog button {
  font-size: 70%;
}

.CodeErrorMarker
{
	color: #EE3333 ;
	float:left;
	margin: 0;
    padding: 0;
}
.CodeErrorMarker a
{
	color:inherit;
	text-decoration:  none;
}

.CodeWarningMarker
{
	color: #EE9933 ;
	float:left;
}
.CodeWarningMarker a
{
	color:inherit;
	text-decoration:  none;
}

#errorConsole
{
	position:absolute;
   	bottom:0;
   	width:90%;
   	height:60px; 
}
#codeView
{
	min-height:100%;
   	position:relative;
   	padding-bottom: 60px;
}
#mainStuff
{
	padding:10px;
	padding-bottom:100px;
}

/*-------------------*/

/*for file browser*/
.ui-state-default
{
	background-color:  #262626;
	background-image: none;
}

.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default
{
	background-color:  #3a3f44;
	background-image: none;
	color:#C8C8C8;
	border-color: transparent;
}
.jstree
{
	border:0px;
}

#vakata-contextmenu 
{
	background-color:  #3a3f44 !important;
	border: 1px solid rgba(0, 0, 0, 0.3) !important;
	color:#C8C8C8 !important;
}

#vakata-contextmenu li a
{
	color:#C8C8C8 !important;
}


/*-------------------------------------*/	
/*viewer*/
/*canvas { cursor: move; }*/
	.navbar .container { height: 1em; }
	
.uicons:hover
{
	text-decoration:  none;
	color: #ff8900;
}
.uicon-off
{
	color: #aaaaaa;
}

/*-------------------------------------*/	
/*settings*/

.control-group
{
	padding: 0px;
	padding-top:0px;
	border:0px;
}

legend
{
	font-size: 1em;
	line-height: 1em;
	font-weight: bold;
}

legend + .control-group
{
	margin-top: 2px;
}

.form-horizontal .control-group
{
	margin-bottom: 5px;
}
/*-------------------------------------*/	
/*misc*/

.ui-dialog-titlebar { height: 2em; }

.fill { 
    min-height: 100%;
    height: 100%;
}

body {
        padding-top: 60px;
	
	/*background-color:#222222;#39464e;*/
	/*
	 * background-color:#c0d1b8;
	background-image: -moz-radial-gradient(center center, circle cover, #c0d1b8, #000014 100%);
	background-image: -webkit-radial-gradient(center center, circle cover, #c0d1b8, #000014 100%);
	background-image: -o-radial-gradient(center center, circle cover, #c0d1b8, #000014 100%);
	background-image: -ms-radial-gradient(center center, circle cover, #c0d1b8, #000014 100%);
	background-image: radial-gradient(center center, circle cover, #c0d1b8, #000014 100%);
   	background-repeat: no-repeat;
    background-attachment: fixed;*/
}


.modal-backdrop {background-color: #aaaaaa;}
.modal-backdrop, .modal-backdrop.fade.in {
    opacity: 0.35;
}

/*taken from https://github.com/twitter/bootstrap/issues/675*/
.modal-big {
    width: 750px;
    margin-left: -370px;
}

.modal-reallyBig {
    width: 1024px;
    margin-left: -502px;
}
/*
.bbf-field .bbf-editor {
    margin-left: 40%;
    width: 49%;
  }
      
    .bbf-field input, .bbf-field textarea, .bbf-field select {
      width: 50%;
    }
  
  .bbf-field .bbf-help {
    margin-left: 25%;
    width: 74%;
    color: #999;
  }*/

